# ba_copilot_ai

./: .dockerignore  .env.example  .env.template  .gitignore  AI_API_SPECS.md  API_Specification.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIGMA_INTEGRATION_SUMMARY.md  FIGMA_MCP_GUIDELINE.md  GUIDELINE.md  IMPLEMENTATION_SUMMARY.md  Initial_API_Specification.md  README.md  RENDER_DEPLOYMENT.md  SUMMARY.md  System_Architecture.md  UI_UX_PhacThao.md  ai_workflow.py  connect_model.py  current_mock_GET_API.md  docker-compose.yml  factory.py  figma_mcp.py  gunicorn.conf.py  integration_test_complete.py  main.py  prompt.md  pyproject.toml  pytest.ini  raw_meeting_notes.md  requirements.txt  response.py  start.sh  test_api.sh  test_api_complete.py  (+7 more)
.github/workflows/: ai-ci.yml
constants/: docs_constraint.py
diagram_workflow/: workflow.py
docs/: AI_PROVIDER_FACTORY.md  AI_SERVICE_IMPLEMENTATION_GUIDE.md  DOCUMENT_CONSTRAINTS_IMPLEMENTATION_GUIDE.md  DOCUMENT_CONSTRAINTS_SPECIFICATION.md  ERROR_HANDLING.md  REFACTORING_SUMMARY.md  ai_api_specs.md  ai_conversation_flow.md  architecture_diagram_flow.md  database_documentation.md  database_integrated.md  flowchart_generation_flow.md  integration_testing_guide.md  project_plan.md  project_structure.md  rag_schema.sql  sequence_diagram_flow.md  srs_generator_flow.md  system_architecture.md  usecase_diagram_flow.md  wireframe_generator_flow.md
infrastructure/: .env.template  Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf
infrastructure/sql/: extensions.sql  init.sql  production-init.sql
models/: __init__.py  activity_diagram.py  business_case.py  chat_context_message.py  class_diagram.py  compliance.py  cost_benefit_analysis.py  diagram.py  feasibility_study.py  high_level_requirements.py  hld_arch.py  hld_cloud.py  hld_tech.py  lld_api.py  lld_arch.py  lld_db.py  lld_pseudo.py  metadata_extraction.py  product_roadmap.py  requirements_management_plan.py  risk_register.py  rtm.py  scope_statement.py  srs.py  stakeholder_register.py  uiux_mockup.py  uiux_prototype.py  uiux_wireframe.py  usecase_diagram.py  wireframe.py
scripts/: Makefile  backup_database.sh  build.sh  run_migrations.py  run_migrations.sh  verify_schema.py
services/: __init__.py  constraint_validator.py
services/mermaid_validator/: __init__.py  config.py  exceptions.py  subprocess_manager.py
services/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  retriever.py  supabase_client.py  tokenizer.py
src/: __init__.py  alembic.ini  main.py
src/alembic/: env.py  script.py.mako
src/core/: config.py
src/schemas/: srs.py
src/services/: __init__.py  conversation_service.py  diagram_service.py  llm_service.py  llm_service_original.py  srs_service.py  wireframe_service.py
src/shared/: __init__.py  endpoint_helpers.py  error_handler.py
srs_workflow/: __init__.py  workflow.py
tests/: __init__.py  conftest.py  final_verification.py  manual_validation_test.py  quick_validator_test.py  test_activity_diagram_api.py  test_activity_diagram_workflow.py  test_api_complete.py  test_business_case_workflow.py  test_business_planning_phase_integration.py  test_compliance_workflow.py  test_constraint_context.py  test_constraint_validation.py  test_conversations.py  test_cost_benefit_analysis_workflow.py  test_diagrams.py  test_e2e_diagrams.py  test_factory_pattern.py  test_feasibility_study_workflow.py  test_full_integration.py  test_health.py  test_high_level_requirements_workflow.py  test_hld_arch_workflow.py  test_hld_cloud_workflow.py  test_hld_tech_workflow.py  test_lld_endpoints.py  test_llm_service.py  test_metadata_extraction.py  test_phase3_api_endpoints.py  test_phase3_integration.py  test_phase4_integration.py  test_phase6_integration.py  test_product_roadmap_workflow.py  test_requirements_management_plan_workflow.py  test_risk_register_workflow.py  test_scope_statement_workflow.py  test_srs.py  test_srs_ai_direct.py  test_srs_mock.py  test_srs_real.py  (+4 more)
tests/artifacts/: test_srs_mock_output.json
utils/: __init__.py  context_builder.py  default_document_format.py  prompt_builder.py  response_parser.py  tokenizer.py
wireframe_workflow/: workflow.py
workflows/: __init__.py
workflows/activity_diagram_workflow/: __init__.py  workflow.py
workflows/base/: additional_rules.py  document_generator.py  state.py
workflows/business_case_workflow/: __init__.py  workflow.py
workflows/class_diagram_workflow/: __init__.py  workflow.py
workflows/compliance_workflow/: __init__.py  workflow.py
workflows/cost_benefit_analysis_workflow/: __init__.py  workflow.py
workflows/diagram_workflow/: __init__.py  workflow.py
workflows/feasibility_study_workflow/: __init__.py  workflow.py
workflows/high_level_requirements_workflow/: __init__.py  workflow.py
workflows/hld_arch_workflow/: __init__.py  workflow.py
workflows/hld_cloud_workflow/: __init__.py  workflow.py
workflows/hld_tech_workflow/: __init__.py  workflow.py
workflows/lld_api_workflow/: __init__.py  workflow.py
workflows/lld_arch_workflow/: __init__.py  workflow.py
workflows/lld_db_workflow/: __init__.py  workflow.py
workflows/lld_pseudo_workflow/: __init__.py  workflow.py
workflows/metadata_extraction_workflow/: __init__.py  workflow.py
workflows/nodes/: __init__.py  get_content_file.py  get_context_node.py  node_chat_history.py  node_ocr.py  prerequisite_context.py  validate_prerequisites.py
workflows/product_roadmap_workflow/: __init__.py  workflow.py
workflows/requirements_management_plan_workflow/: __init__.py  workflow.py
workflows/risk_register_workflow/: __init__.py  workflow.py
workflows/rtm_workflow/: __init__.py  workflow.py
workflows/scope_statement_workflow/: __init__.py  workflow.py
workflows/srs_workflow/: __init__.py  workflow.py
workflows/stakeholder_register_workflow/: __init__.py  workflow.py
workflows/uiux_mockup_workflow/: __init__.py  workflow.py
workflows/uiux_prototype_workflow/: __init__.py  workflow.py
workflows/uiux_wireframe_workflow/: __init__.py  workflow.py
(+45 files in other folders)
